--- a/src/views/parts/form.ejs
+++ b/src/views/parts/form.ejs
@@ -1,4 +1,4 @@
-<form action="/create" method="POST" class="flex-column">
+<form action="/create" method="POST">
     <input type="text" name="url" placeholder="Cole seu link aqui..."> <br>
     <button>Encurtar</button>
 </form>
