chore: stable version

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,7 +11,12 @@ html {
 
 body {
     height: 100vh;
-    display: grid;
+}
+
+#root{
+    height: 100%;
+    display: grid !important;
+    grid-template-rows: max-content auto max-content;
 }
 
 body, main, .flex-column {
