--- a/frontend/src/pages/list/index.css
+++ b/frontend/src/pages/list/index.css
@@ -3,13 +3,15 @@
 }
 
 #root{
-    display: grid;
+    /* display: grid; */
     height: 100%;
-    place-content: center;
+    /* place-content: center; */
+    display: flex;
+    flex-direction: column;
 }
 
 body{
-    background: #0d1117;
+    background: var(--white);
     color: var(--white);
 }
 
